Add The University of Adelaide to AUTHORS
This is for work performed by kortschak on matrix.

--- a/AUTHORS
+++ b/AUTHORS
@@ -12,3 +12,4 @@ Brendan Tracey <tracey.brendan@gmail.com>
 Dan Kortschak <dan.kortschak@adelaide.edu.au>
 David Samborski <bloggingarrow@gmail.com>
 Jeff Juozapaitis <jjjuozap@email.arizona.edu>
+The University of Adelaide
