--- a/AUTHORS
+++ b/AUTHORS
@@ -11,5 +11,6 @@
 Brendan Tracey <tracey.brendan@gmail.com>
 Dan Kortschak <dan.kortschak@adelaide.edu.au>
 David Samborski <bloggingarrow@gmail.com>
+Facundo Gaich <facugaich@gmail.com>
 Jeff Juozapaitis <jjjuozap@email.arizona.edu>
 The University of Adelaide
