--- a/AUTHORS
+++ b/AUTHORS
@@ -13,4 +13,5 @@ Dan Kortschak <dan.kortschak@adelaide.edu.au>
 David Samborski <bloggingarrow@gmail.com>
 Facundo Gaich <facugaich@gmail.com>
 Jeff Juozapaitis <jjjuozap@email.arizona.edu>
+Sebastien Binet <seb.binet@gmail.com>
 The University of Adelaide
