--- a/AUTHORS
+++ b/AUTHORS
@@ -12,6 +12,7 @@ Brendan Tracey <tracey.brendan@gmail.com>
 Dan Kortschak <dan.kortschak@adelaide.edu.au>
 David Samborski <bloggingarrow@gmail.com>
 Facundo Gaich <facugaich@gmail.com>
+Fazlul Shahriar <fshahriar@gmail.com>
 Jeff Juozapaitis <jjjuozap@email.arizona.edu>
 Jonathan J Lawlor <jonathan.lawlor@gmail.com>
 Pontus Melke <pontusmelke@gmail.com>
