Add Vladimír Chalupecký to AUTHORS and CONTRIBUTORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,3 +18,4 @@ Jonathan J Lawlor <jonathan.lawlor@gmail.com>
 Pontus Melke <pontusmelke@gmail.com>
 Sebastien Binet <seb.binet@gmail.com>
 The University of Adelaide
+Vladimír Chalupecký <vladimir.chalupecky@gmail.com>
