--- a/AUTHORS
+++ b/AUTHORS
@@ -18,6 +18,7 @@ James Bell <james@stellentus.com>
 Jeff Juozapaitis <jjjuozap@email.arizona.edu>
 Jonathan J Lawlor <jonathan.lawlor@gmail.com>
 Pontus Melke <pontusmelke@gmail.com>
+Renée French
 Sebastien Binet <seb.binet@gmail.com>
 Steve McCoy <mccoyst@gmail.com>
 The University of Adelaide
