Added myself (evahlis@gmail.com)

--- a/AUTHORS
+++ b/AUTHORS
@@ -23,3 +23,4 @@ Sebastien Binet <seb.binet@gmail.com>
 Steve McCoy <mccoyst@gmail.com>
 The University of Adelaide
 Vladimír Chalupecký <vladimir.chalupecky@gmail.com>
+Yevgeniy Vahlis <evahlis@gmail.com>
