Added myself (jd.schroeder@gmail.com)

--- a/AUTHORS
+++ b/AUTHORS
@@ -18,6 +18,7 @@ Fazlul Shahriar <fshahriar@gmail.com>
 James Bell <james@stellentus.com>
 Jeff Juozapaitis <jjjuozap@email.arizona.edu>
 Jonathan J Lawlor <jonathan.lawlor@gmail.com>
+Jonathan Schroeder <jd.schroeder@gmail.com>
 Pontus Melke <pontusmelke@gmail.com>
 Renée French
 Sebastien Binet <seb.binet@gmail.com>
