--- a/AUTHORS
+++ b/AUTHORS
@@ -19,6 +19,7 @@ James Bell <james@stellentus.com>
 Jeff Juozapaitis <jjjuozap@email.arizona.edu>
 Jonathan J Lawlor <jonathan.lawlor@gmail.com>
 Jonathan Schroeder <jd.schroeder@gmail.com>
+Joseph Watson <jtwatson@linux-consulting.us>
 Pontus Melke <pontusmelke@gmail.com>
 Renée French
 Sebastien Binet <seb.binet@gmail.com>
