--- a/AUTHORS
+++ b/AUTHORS
@@ -20,6 +20,7 @@ Jeff Juozapaitis <jjjuozap@email.arizona.edu>
 Jonathan J Lawlor <jonathan.lawlor@gmail.com>
 Jonathan Schroeder <jd.schroeder@gmail.com>
 Joseph Watson <jtwatson@linux-consulting.us>
+Lyron Winderbaum <lyron.winderbaum@student.adelaide.edu.au>
 Pontus Melke <pontusmelke@gmail.com>
 Renée French
 Sebastien Binet <seb.binet@gmail.com>
