--- a/AUTHORS
+++ b/AUTHORS
@@ -15,6 +15,7 @@ David Samborski <bloggingarrow@gmail.com>
 Ethan Burns <burns.ethan@gmail.com>
 Facundo Gaich <facugaich@gmail.com>
 Fazlul Shahriar <fshahriar@gmail.com>
+Iakov Davydov <iakov.davydov@unil.ch>
 James Bell <james@stellentus.com>
 Jeff Juozapaitis <jjjuozap@email.arizona.edu>
 Jonathan J Lawlor <jonathan.lawlor@gmail.com>
