--- a/AUTHORS
+++ b/AUTHORS
@@ -25,6 +25,7 @@ Lyron Winderbaum <lyron.winderbaum@student.adelaide.edu.au>
 Pontus Melke <pontusmelke@gmail.com>
 Renée French
 Sebastien Binet <seb.binet@gmail.com>
+Shawn Smith <shawnpsmith@gmail.com>
 Steve McCoy <mccoyst@gmail.com>
 The University of Adelaide
 Vladimír Chalupecký <vladimir.chalupecky@gmail.com>
