--- a/AUTHORS
+++ b/AUTHORS
@@ -24,6 +24,7 @@ Joseph Watson <jtwatson@linux-consulting.us>
 Lyron Winderbaum <lyron.winderbaum@student.adelaide.edu.au>
 Pontus Melke <pontusmelke@gmail.com>
 Renée French
+Scott Holden <scott@sshconnection.com>
 Sebastien Binet <seb.binet@gmail.com>
 Shawn Smith <shawnpsmith@gmail.com>
 Steve McCoy <mccoyst@gmail.com>
