A+C: Add Chris Tessum + institutions

--- a/AUTHORS
+++ b/AUTHORS
@@ -10,6 +10,7 @@
 
 Brendan Tracey <tracey.brendan@gmail.com>
 Chih-Wei Chang <bert.cwchang@gmail.com>
+Chris Tessum <ctessum@gmail.com>
 Dan Kortschak <dan.kortschak@adelaide.edu.au> <dan@kortschak.io>
 David Samborski <bloggingarrow@gmail.com>
 Ethan Burns <burns.ethan@gmail.com>
@@ -30,5 +31,7 @@ Sebastien Binet <seb.binet@gmail.com>
 Shawn Smith <shawnpsmith@gmail.com>
 Steve McCoy <mccoyst@gmail.com>
 The University of Adelaide
+The University of Minnesota
+The University of Washington
 Vladimír Chalupecký <vladimir.chalupecky@gmail.com>
 Yevgeniy Vahlis <evahlis@gmail.com>
