--- a/AUTHORS
+++ b/AUTHORS
@@ -26,6 +26,7 @@ Joseph Watson <jtwatson@linux-consulting.us>
 Konstantin Shaposhnikov <k.shaposhnikov@gmail.com>
 Lyron Winderbaum <lyron.winderbaum@student.adelaide.edu.au>
 Matthieu Di Mercurio <matthieu.dimercurio@gmail.com>
+Or Rikon <rikonor@gmail.com>
 Pontus Melke <pontusmelke@gmail.com>
 Renée French
 Robin Eklind <r.eklind.87@gmail.com>
