A+C add Evert Lammerts (#29)

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ Chris Tessum <ctessum@gmail.com>
 Dan Kortschak <dan.kortschak@adelaide.edu.au> <dan@kortschak.io>
 David Samborski <bloggingarrow@gmail.com>
 Ethan Burns <burns.ethan@gmail.com>
+Evert Lammerts <evert.lammerts@gmail.com>
 Facundo Gaich <facugaich@gmail.com>
 Fazlul Shahriar <fshahriar@gmail.com>
 Iakov Davydov <iakov.davydov@unil.ch>
