CONTRIBUTORS: Add Tobin Harding

--- a/AUTHORS
+++ b/AUTHORS
@@ -38,5 +38,6 @@ Steve McCoy <mccoyst@gmail.com>
 The University of Adelaide
 The University of Minnesota
 The University of Washington
+Tobin Harding <me@tobin.cc>
 Vladimír Chalupecký <vladimir.chalupecky@gmail.com>
 Yevgeniy Vahlis <evahlis@gmail.com>
