Add Leonid Kneller.

--- a/AUTHORS
+++ b/AUTHORS
@@ -27,6 +27,7 @@ Joseph Watson <jtwatson@linux-consulting.us>
 Julien Roland <juroland@gmail.com>
 Kent English <kent.english@gmail.com>
 Konstantin Shaposhnikov <k.shaposhnikov@gmail.com>
+Leonid Kneller <recondite.matter@gmail.com>
 Lyron Winderbaum <lyron.winderbaum@student.adelaide.edu.au>
 Matthieu Di Mercurio <matthieu.dimercurio@gmail.com>
 Or Rikon <rikonor@gmail.com>
