--- a/AUTHORS
+++ b/AUTHORS
@@ -34,6 +34,7 @@ Or Rikon <rikonor@gmail.com>
 Pontus Melke <pontusmelke@gmail.com>
 Renée French
 Robin Eklind <r.eklind.87@gmail.com>
+Samuel Kelemen <samuel@kelemen.us>
 Scott Holden <scott@sshconnection.com>
 Sebastien Binet <seb.binet@gmail.com>
 Shawn Smith <shawnpsmith@gmail.com>
