--- a/AUTHORS
+++ b/AUTHORS
@@ -9,6 +9,7 @@
 # Please keep the list sorted.
 
 Brendan Tracey <tracey.brendan@gmail.com>
+Bill Gray <wgray@gogray.com>
 Bill Noon <noon.bill@gmail.com>
 Chih-Wei Chang <bert.cwchang@gmail.com>
 Chris Tessum <ctessum@gmail.com>
