--- a/AUTHORS
+++ b/AUTHORS
@@ -38,6 +38,7 @@ Pontus Melke <pontusmelke@gmail.com>
 Renée French
 Robin Eklind <r.eklind.87@gmail.com>
 Samuel Kelemen <Samuel@Kelemen.us>
+Sam Zaydel <szaydel@gmail.com>
 Scott Holden <scott@sshconnection.com>
 Sebastien Binet <seb.binet@gmail.com>
 Shawn Smith <shawnpsmith@gmail.com>
