--- a/AUTHORS
+++ b/AUTHORS
@@ -22,6 +22,7 @@ Fazlul Shahriar <fshahriar@gmail.com>
 Iakov Davydov <iakov.davydov@unil.ch>
 Jalem Raj Rohit <jrajrohit33@gmail.com>
 James Bell <james@stellentus.com>
+James Bowman <james.edward.bowman@gmail.com>
 Jeff Juozapaitis <jjjuozap@email.arizona.edu>
 Jonathan J Lawlor <jonathan.lawlor@gmail.com>
 Jonathan Schroeder <jd.schroeder@gmail.com>
