A+C: Adding myself to Authors and Contributors.

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@
 Brendan Tracey <tracey.brendan@gmail.com>
 Bill Gray <wgray@gogray.com>
 Bill Noon <noon.bill@gmail.com>
+Chad Kunde <kunde21@gmail.com>
 Chih-Wei Chang <bert.cwchang@gmail.com>
 Chris Tessum <ctessum@gmail.com>
 Dan Kortschak <dan.kortschak@adelaide.edu.au> <dan@kortschak.io>
