--- a/AUTHORS
+++ b/AUTHORS
@@ -24,6 +24,7 @@ Iakov Davydov <iakov.davydov@unil.ch>
 Jalem Raj Rohit <jrajrohit33@gmail.com>
 James Bell <james@stellentus.com>
 James Bowman <james.edward.bowman@gmail.com>
+Janne Snabb <snabb@epipe.com>
 Jeff Juozapaitis <jjjuozap@email.arizona.edu>
 Jonathan J Lawlor <jonathan.lawlor@gmail.com>
 Jonathan Schroeder <jd.schroeder@gmail.com>
