Added myself, and my employeer to AUTHORS and CONTRIBUTORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -20,6 +20,7 @@ Ethan Burns <burns.ethan@gmail.com>
 Evert Lammerts <evert.lammerts@gmail.com>
 Facundo Gaich <facugaich@gmail.com>
 Fazlul Shahriar <fshahriar@gmail.com>
+Google Inc
 Iakov Davydov <iakov.davydov@unil.ch>
 Jalem Raj Rohit <jrajrohit33@gmail.com>
 James Bell <james@stellentus.com>
