AUTHORS: add Davor Kapsa

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ Chih-Wei Chang <bert.cwchang@gmail.com>
 Chris Tessum <ctessum@gmail.com>
 Dan Kortschak <dan.kortschak@adelaide.edu.au> <dan@kortschak.io>
 David Samborski <bloggingarrow@gmail.com>
+Davor Kapsa <davor.kapsa@gmail.com>
 Ethan Burns <burns.ethan@gmail.com>
 Evert Lammerts <evert.lammerts@gmail.com>
 Facundo Gaich <facugaich@gmail.com>
